--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 altgraph==0.17
+cycler==0.10.0
 et-xmlfile==1.1.0
 future==0.18.2
+kiwisolver==1.3.1
+matplotlib==3.4.2
 numpy==1.20.3
 openpyxl==3.0.7
 pandas==1.2.4
 pefile==2019.4.18
+Pillow==8.2.0
 pyinstaller==4.3
 pyinstaller-hooks-contrib==2021.1
+pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
