--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altgraph==0.17
 et-xmlfile==1.1.0
 future==0.18.2
+mpmath==1.2.1
 numpy==1.20.3
 openpyxl==3.0.7
 panda3d==1.10.9
@@ -16,5 +17,6 @@ python-dateutil==2.8.1
 pytz==2021.1
 pywin32-ctypes==0.2.0
 six==1.16.0
+sympy==1.8
 unit-converter==1.1.0
 xlrd==2.0.1
