--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ PyQt5Designer==5.14.1
 python-dateutil==2.8.1
 pytz==2021.1
 pywin32-ctypes==0.2.0
+scipy==1.6.3
 six==1.16.0
 sympy==1.8
 unit-converter==1.1.0
