--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
 PyQt5Designer==5.14.1
+PySide2==5.15.2
 python-dateutil==2.8.1
 pytz==2021.1
 pywin32-ctypes==0.2.0
 scipy==1.6.3
+shiboken2==5.15.2
 six==1.16.0
 sympy==1.8
 unit-converter==1.1.0
