--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,154 @@
+aiohttp==3.7.4.post0
 altgraph==0.17
-antiorm==1.2.1
+anyio==3.2.1
+argon2-cffi==20.1.0
+astroid==2.5.6
+astropy==4.2.1
+async-generator==1.10
+async-timeout==3.0.1
+attrs==21.2.0
+autobahn==21.3.1
+backcall==0.2.0
+backports.entry-points-selectable==1.1.0
+bitstring==3.1.7
+bleach==3.3.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+cryptography==3.4.7
 cycler==0.10.0
-db==0.1.1
-db-sqlite3==0.0.1
+debugpy==1.3.0
+decorator==5.0.9
+defusedxml==0.7.1
+distlib==0.3.2
+docutils==0.17.1
+ecdsa==0.16.1
+entrypoints==0.3
+esptool==3.0
 et-xmlfile==1.1.0
+filelock==3.0.12
 future==0.18.2
+hyperlink==21.0.0
+idna==2.10
+ipykernel==6.0.2
+ipython==7.25.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.8.0
+jedi==0.18.0
+Jinja2==3.0.1
+jplephem==2.15
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyter-server==1.9.0
+jupyter-server-proxy==3.1.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Kivy==2.0.0
+kivy-deps.angle==0.3.0
+kivy-deps.glew==0.3.0
+kivy-deps.gstreamer==0.3.2
+kivy-deps.sdl2==0.3.1
+Kivy-Garden==0.1.4
 kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
 matplotlib==3.4.2
-mpmath==1.2.1
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+mistune==0.8.4
+multidict==5.1.0
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
 numpy==1.20.3
 openpyxl==3.0.7
+OrbitalPy==0.7.0
+packaging==21.0
+panda==0.3.1
 panda3d==1.10.9
 pandas==1.2.4
+pandocfilters==1.4.3
+parso==0.8.2
+pbr==5.6.0
 pefile==2019.4.18
+pickleshare==0.7.5
 Pillow==8.2.0
+platformdirs==2.0.2
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+psutil==5.8.0
+pycparser==2.20
+pyerfa==1.7.3
+pygame==2.0.1
+Pygments==2.8.1
 pyinstaller==4.3
 pyinstaller-hooks-contrib==2021.1
+pylint==2.8.2
 pyparsing==2.4.7
+pypiwin32==223
 PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.1.0
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
+pyqt5-tools==5.15.4.3.0.3
 PyQt5Designer==5.14.1
+pyrsistent==0.18.0
+pyserial==3.5
 PySide2==5.15.2
+PySide2extn==1.0.0
+PySide6==6.1.0
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 pytz==2021.1
+pywin32==300
 pywin32-ctypes==0.2.0
+pywinpty==1.1.3
+pyzmq==22.1.0
+QDarkStyle==3.0.2
+qt5-applications==5.15.2.2.1
+qt5-tools==5.15.2.1.0.1
+qtconsole==5.1.1
+QtPy==1.9.0
+reedsolo==1.5.4
+Represent==1.6.0.post0
+requests==2.25.1
+requests-unixsocket==0.2.0
 scipy==1.6.3
+Send2Trash==1.7.1
+sgp4==2.19
 shiboken2==5.15.2
+shiboken6==6.1.0
+simpervisor==0.4
 six==1.16.0
-sympy==1.8
+skyfield==1.39
+sniffio==1.2.0
+stevedore==3.3.0
+terminado==0.10.1
+testpath==0.5.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+txaio==21.2.1
+typing-extensions==3.10.0.0
+ui==0.1.4
 unit-converter==1.1.0
+urllib3==1.26.4
+virtualenv==20.6.0
+virtualenv-clone==0.5.5
+virtualenvwrapper==4.8.4
+vpython==7.6.1
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.1.0
+widgetsnbextension==3.5.1
+wrapt==1.12.1
 xlrd==2.0.1
+yarl==1.6.3
